Fix slider alignment on Firefox

--- a/src/scss/player.controls.scss
+++ b/src/scss/player.controls.scss
@@ -81,14 +81,13 @@
 
 .slider-inner {
     position: relative;
-    display: flex;
-    align-items: center;
     width: calc(100% - 12px);
     height: 100%;
 }
 
 .slider-thumb {
     position: absolute;
+    top: calc(50% - 6px);
     width: 12px;
     height: 12px;
     border: 3px solid #ddd;
